--- a/src/appsco-compliance-report-page.html
+++ b/src/appsco-compliance-report-page.html
@@ -276,8 +276,26 @@
                 this.$.appscoContent.toggleSection('resource');
             },
 
-            getComplianceReportFilters: function() {
-                return this.$.complianceReportPageFilters.getFilters();
+            getFilters: function() {
+                var filters = this.$.complianceReportPageFilters.getFilters(),
+                    data = {};
+                switch (filters.type) {
+                    case 'users':
+                        data.assignee_type = 'user';
+                        break;
+
+                    case 'contacts':
+                        data.assignee_type = 'contact';
+                        break;
+                }
+                if (filters.group && filters.group.alias && filters.group.alias !== 'all') {
+                    data.groups = [filters.group.alias];
+                }
+                if (filters.term) {
+                    data.term = filters.term;
+                }
+
+                return data;
             },
 
             _updateScreen: function() {
