--- a/src/appsco-policies-report-page.html
+++ b/src/appsco-policies-report-page.html
@@ -218,12 +218,30 @@
                 this.$.appscoContent.toggleSection('resource');
             },
 
-            getReportFilters: function() {
-                return this.$.policyReportPageFilters.getFilters();
-            },
+            getFilters: function() {
+                var filters = this.$.policyReportPageFilters.getFilters(),
+                    roles = this.$.appscoPolicyReportRoles.getAllItems(),
+                    data = {
+                        limit: 1000
+                    };
 
-            getReportRoles: function() {
-                return this.$.appscoPolicyReportRoles.getAllItems();
+                if(filters.policy.policy) {
+                    data.policy = filters.policy.policy;
+                }
+                if(filters.dateFrom) {
+                    data.from = filters.dateFrom;
+                }
+                if(filters.dateTo) {
+                    data.to = filters.dateTo;
+                }
+
+                if (0 < roles.length) {
+                    data.accounts = [];
+                    roles.forEach(function(role, i) {
+                        data.accounts.push(role.account.self);
+                    });
+                }
+                return data;
             },
 
             _computeRolesApi: function(rolesApi) {
