--- a/src/appsco-billing-report-page.html
+++ b/src/appsco-billing-report-page.html
@@ -400,7 +400,7 @@
             getFilters: function () {
                 return {
                     term: this.searchTerm,
-                    paymentType: this.paymentType,
+                    payment_type: this.paymentType,
                     period: this.period
                 };
             }
